--- a/projekt_KacperNowak/projektKN_stop_web/WebContent/templates/header.xhtml
+++ b/projekt_KacperNowak/projektKN_stop_web/WebContent/templates/header.xhtml
@@ -6,7 +6,7 @@
 
  <div class="container" data-aos="fade-up">
         <header class="section-header">
-                   <img src="/projektKN_stop_web/userPage/resources/images/logoWWW.png" class="img-fluid" alt="zdjecie" width="250em" />
+                   <img src="/projektKN_stop_web/public/resources/images/logoWWW.png" class="img-fluid" alt="zdjecie" width="250em" />
 
         </header>
     </div>
@@ -24,13 +24,13 @@
             </p:menuitem>
             	
            <p:menuitem>
-            	<a class="nav-link scrollto" href="/projektKN_stop_web/userPage/info.jsf">Aktualności</a>
+            	<a class="nav-link scrollto" href="/projektKN_stop_web/public/info.jsf">Aktualności</a>
            </p:menuitem>
             <p:menuitem>
             	<a href="{$conf->action_root}shop"><span>Sklep</span></a>
 		   </p:menuitem>
             <p:menuitem>
-				<a href="{$conf->action_root}loginShow" class="getstarted">Zaloguj</a>           
+				<a href="/projektKN_stop_web/public/login.jsf" class="getstarted">Zaloguj</a>           
 			</p:menuitem>
            <p:menuitem>
 		        <a href="{$conf->action_root}logout" class="getstarted">Wyloguj</a>
@@ -39,7 +39,7 @@
 				<a href="{$conf->action_root}panel" class="getstarted">Panel</a>
 			</p:menuitem>
 			<p:menuitem>
-				<a href="/projektKN_stop_web/adminPage/panel.jsf" class="getstarted">Panel administratora</a>
+				<a href="/projektKN_stop_web/pages/admin/panel.jsf" class="getstarted">Panel administratora</a>
 			</p:menuitem>
            
         </p:breadCrumb>
